third_party/move/move-compiler-v2/tests/checking-lang-v2.4/public_const_not_supported.exp

Diagnostics:
error: unsupported language construct
  ┌─ tests/checking-lang-v2.4/public_const_not_supported.move:2:5
  │
2 │     public const MAX: u64 = 100;
  │     ^^^^^^ Move 2.5 language construct is not enabled: visibility modifier on constants

error: unsupported language construct
  ┌─ tests/checking-lang-v2.4/public_const_not_supported.move:3:5
  │
3 │     package const MIN: u64 = 0;
  │     ^^^^^^^ Move 2.5 language construct is not enabled: visibility modifier on constants
