third_party/move/move-compiler-v2/tests/checking-lang-v2.4/public_const_not_supported.move
module 0x42::m {
    public const MAX: u64 = 100;
    package const MIN: u64 = 0;
}
